# pokerclock

./: CHANGELOG  CMakeLists.txt  Doxyfile  INSTALL  README  TODO  install.sh  pokerclock.kdevelop  pokerclock.kdevelop.pcs  pokerclock.kdevses
debian/: changelog  control  copyright  rules
src/: CMakeLists.txt  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui  pokerclock.desktop  pokerclock.h  pokerclock.qrc  pokerclock.rc  prizeWindow.cpp  prizeWindow.h  prizeWindow.ui  qtpie.cpp  qtpie.h  src.pro
templates/: cpp
