CMAKE_MINIMUM_REQUIRED( VERSION 2.4.0 )

PROJECT(pokerclock)

##### SETTINGS #####
SET(KDE_DESKTOP_DIR /usr/share/applications)
SET(KDE_ICON_DIR /usr/share/pixmaps)
SET(UNIX_LINK_DIR /usr/local/bin)
IF (UNIX)
	SET(INSTALL_SUFFIX share/${PROJECT_NAME})
	ADD_DEFINITIONS(-DUNIX)
	ADD_DEFINITIONS(-Wall -W)
	#SET(DEB_BUILD ON) # Only for build debian package
ENDIF (UNIX)
IF (WIN32)
	SET(INSTALL_SUFFIX .)
	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-subsystem,windows")
	ADD_DEFINITIONS(-DWIN32)
ENDIF (WIN32)
#SET(CMAKE_VERBOSE_MAKEFILE  ON)
####################

MESSAGE(STATUS "${PROJECT_NAME} will be built to install into ${CMAKE_INSTALL_PREFIX}")

IF(DEBUG)
  SET(CMAKE_BUILD_TYPE Debug)
  MESSAGE(STATUS "=> Debug build")
ELSE(DEBUG)
  SET(CMAKE_BUILD_TYPE RELEASE)
  MESSAGE(STATUS "=> Release build (use -DDEBUG=1 for debug one)")
ENDIF(DEBUG)

SET (QT_MT_REQUIRED true)
SET (QT_MIN_VERSION "4.2.0")

FIND_PACKAGE( Qt4 REQUIRED )
INCLUDE( ${QT_USE_FILE} )

ADD_SUBDIRECTORY( src )