SET(SRCS
	main.cpp
	mainWindow.cpp
	prizeWindow.cpp
	qtpie.cpp
)

SET(MOC_HDRS
	mainWindow.h
	prizeWindow.h
	qtpie.h
)

SET(UIS
	mainWindow.ui
	prizeWindow.ui
)

SET(RCS
	pokerclock.qrc
)

QT4_ADD_RESOURCES( RC_RCS ${RCS} )
QT4_WRAP_UI( UI_HDRS ${UIS} )
QT4_WRAP_CPP( MOC_SRCS ${MOC_HDRS} )

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_BINARY_DIR}
	${CMAKE_SOURCE_DIR}
	${QT_INCLUDE_DIR}
)

IF (WIN32)
	ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/pokerclock_rc.o
		COMMAND windres.exe -I${CMAKE_CURRENT_SOURCE_DIR}
		-i ${CMAKE_CURRENT_SOURCE_DIR}/pokerclock.rc
		-o ${CMAKE_CURRENT_BINARY_DIR}/pokerclock_rc.o)
	SET(SRCS ${SRCS} ${CMAKE_CURRENT_BINARY_DIR}/pokerclock_rc.o)
ENDIF (WIN32)

ADD_EXECUTABLE(${PROJECT_NAME}
	${SRCS}
	${MOC_SRCS}
	${UI_HDRS}
	${RC_RCS}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	${QT_LIBRARIES}
)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${INSTALL_SUFFIX})
INSTALL(FILES sound/event.wav DESTINATION ${INSTALL_SUFFIX})

IF (UNIX)
	INSTALL(FILES images/pokerclock.png DESTINATION ${INSTALL_SUFFIX})
# KDE
	INSTALL(FILES pokerclock.desktop DESTINATION ${KDE_DESKTOP_DIR})
	INSTALL(FILES images/pokerclock.png DESTINATION ${KDE_ICON_DIR})
# KDE

	IF (DEB_BUILD)
	   SET(UNIX_LINK_DIR ${CMAKE_SOURCE_DIR}/debian/${PROJECT_NAME}/${UNIX_LINK_DIR})
	   INSTALL(CODE "EXECUTE_PROCESS(COMMAND mkdir ${UNIX_LINK_DIR} WORKING_DIRECTORY .)" )
	ENDIF (DEB_BUILD)
	
	INSTALL(CODE "EXECUTE_PROCESS(COMMAND ln -s ${CMAKE_INSTALL_PREFIX}/${INSTALL_SUFFIX}/${PROJECT_NAME} ${UNIX_LINK_DIR}/${PROJECT_NAME} WORKING_DIRECTORY .)" )
ENDIF (UNIX)
if(WIN32)
	INSTALL(FILES images/pokerclock.ico DESTINATION ${INSTALL_SUFFIX})
endif(WIN32)

SET( POKERCLOCK_SOURCE_DIR debsource )

add_custom_command(
	OUTPUT "${POKERCLOCK_SOURCE_DIR}"
	COMMAND rm -rf ${CMAKE_BINARY_DIR}/${POKERCLOCK_SOURCE_DIR}
	COMMAND mkdir -p ${CMAKE_BINARY_DIR}/${POKERCLOCK_SOURCE_DIR}/src
	COMMAND cp ${SRCS} ${MOC_HDRS} CMakeLists.txt ${CMAKE_BINARY_DIR}/${POKERCLOCK_SOURCE_DIR}/src
  COMMAND cp ../CMakeLists.txt ${CMAKE_BINARY_DIR}/${POKERCLOCK_SOURCE_DIR}
	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src
	COMMENT "EXPORTING")

add_custom_target(export DEPENDS "${POKERCLOCK_SOURCE_DIR}")
